--- a/old/style.css
+++ b/old/style.css
@@ -7,7 +7,7 @@ body {
 
 h1 {
 	margin-top: 0;
-	color: #666666;
+	color: navy;
 }
 
 form {
@@ -15,9 +15,6 @@ form {
 	padding: 10px;
 }
 
-#update {
-	border: 1px solid green;
-	padding: 10px;
-	margin-bottom: 1em;
-	background-color: #ddffdd;
+#old {
+	border: 1px solid red;
 }
